# rdb-based-api

./: update.sh
.github/: dependabot.yml
.github/workflows/: cicd.yml  enable-auto-merge.yml
mysql-based/: .env  docker-compose.yml
mysql-based/db/: init.sql
mysql-based/r2d2-based/: .dockerignore  Cargo.toml  README.md  docker-compose.yml
mysql-based/r2d2-based/dockerfile/: Dockerfile
mysql-based/sqlx-based/: .gitignore  Cargo.toml  docker-compose.yml
mysql-based/sqlx-based/dockerfile/: Dockerfile
mysql-based/sqlx-based/src/: handlers.rs  main.rs
mysql-based/src/: main.rs
