[package]
name = "mysql-based-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.7.4"
mysql = "^24"
r2d2_mysql = "^24"
hyper = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
tower-http = { version = "^0.5.2", features = ["cors", "compression-full"] }
dotenvy = "^0.15.7"
