[package]
name = "sqlx-based"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "^0.7", features = [ "runtime-tokio", "mysql" ] }
sqlx-mysql = "^0.7.4"
mysql = { version = "^25" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_with = { version = "^3.8.1", features = ["json"] }
axum = "^0.7.5"
hyper = "^1"
tokio = { version = "^1", features = ["full"] }
tower-http = { version = "^0.5.2", features = ["cors", "compression-full", "trace"] }
dotenvy = "^0.15.7"
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = ["json"] }
tracing-log = "^0.2.0"
log = "^0.4.22"
