[package]
name = "sqlx-based"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "^0.8.6", features = [ "runtime-tokio", "mysql" ] }
sqlx-mysql = "^0.8.2"
mysql = { version = "^26.0.0" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_with = { version = "^3.14.0", features = ["json"] }
axum = "^0.8.4"
hyper = "^1"
tokio = { version = "^1", features = ["full"] }
tower-http = { version = "^0.6.6", features = ["cors", "compression-full", "trace"] }
dotenvy = "^0.15.7"
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.18", features = ["json"] }
tracing-log = "^0.2.0"
log = "^0.4.27"
